--- a/Notebooks/eda.ipynb
+++ b/Notebooks/eda.ipynb
@@ -2773,7 +2773,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "- Majority of recordings taken in the past decade\n",
+    "- Interesting spike around 2003\n",
+    "- Cyclical nature to recording spikes after 2013"
+   ]
   },
   {
    "cell_type": "code",
@@ -2800,6 +2804,14 @@
     "ax2.set_xlabel('Hour')\n",
     "ax2.set_ylabel('Quantity')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Most recordings taken between 6AM and 12PM\n",
+    "- Gradual decrease as the day moves on from 8AM"
    ]
   }
  ],
